Add link back to home

--- a/src/App.scss
+++ b/src/App.scss
@@ -13,7 +13,9 @@ $border-check: 1px solid #ec4c8a;
 $clr-blue: #4369b2;
 $clr-white: #fff;
 $clr-black: #111;
-$clr-light-blue: #708EC5;
+$clr-light-blue: #708ec5;
+$clr-green: #2F6C52;
+$clr-black-two: #1F2937;
 
 html {
   scroll-behavior: smooth;
