--- a/src/App.scss
+++ b/src/App.scss
@@ -14,8 +14,8 @@ $clr-blue: #4369b2;
 $clr-white: #fff;
 $clr-black: #111;
 $clr-light-blue: #708ec5;
-$clr-green: #2F6C52;
-$clr-black-two: #1F2937;
+$clr-green: #2f6c52;
+$clr-black-two: #1f2937;
 
 html {
   scroll-behavior: smooth;
