--- a/src/components/stylesheets/Preview.scss
+++ b/src/components/stylesheets/Preview.scss
@@ -13,6 +13,12 @@
   position: relative;
   cursor: pointer;
 
+  .oval {
+    background-color: $clr-white;
+    border-radius: 50%;
+    padding: 1rem;
+  }
+
   h1 {
     font-size: 1.25rem;
     position: absolute;
