--- a/src/components/stylesheets/Preview.scss
+++ b/src/components/stylesheets/Preview.scss
@@ -30,6 +30,13 @@
     padding: 0.25rem;
   }
 
+  .pokeball {
+    width: 25px;
+    position: absolute;
+    top: 0;
+    right: 0;
+  }
+
   h2 {
     color: $clr-white;
     font-size: 1.5rem;
