Limit search by id

--- a/src/components/stylesheets/Header.scss
+++ b/src/components/stylesheets/Header.scss
@@ -33,6 +33,8 @@
       height: 2rem;
       padding: 0.25rem;
       z-index: 1;
+      width: 10rem;
+      color: $clr-yellow-gold;
     }
 
     button {
