--- a/src/components/stylesheets/Preview.scss
+++ b/src/components/stylesheets/Preview.scss
@@ -14,7 +14,7 @@
   cursor: pointer;
 
   .oval {
-    background-color: $clr-black-two;
+    background-color: $clr-white;
     border-radius: 50%;
     padding: 1rem;
   }
