--- a/src/components/stylesheets/MainPreview.scss
+++ b/src/components/stylesheets/MainPreview.scss
@@ -42,10 +42,11 @@
       animation-duration: 3s;
       animation-iteration-count: infinite;
     }
+
     @keyframes shake {
       0% { transform: translate(1px, 1px) rotate(0deg); }
       10% { transform: translate(-1px, -2px) rotate(-1deg); }
-      20% { transform: translate(-3px, 0px) rotate(1deg); }
+      20% { transform: translate(-3px, 0) rotate(1deg); }
       30% { transform: translate(3px, 2px) rotate(0deg); }
       40% { transform: translate(1px, -1px) rotate(1deg); }
       50% { transform: translate(-1px, 2px) rotate(-1deg); }
